MIME decode headers when creating nsMsgCompFields for sendlater, bug 152690, r=ducarroz, sr=bienvenu.